# FastApi-generative-AI-Q3

./: README.md
Quarter no 2 _ Frontend development/class01/: README.md  package.json
Quarter no 2 _ Frontend development/class01/app/: page.tsx
Quarter no 2 _ Frontend development/class01/app/About/: page.tsx
Quarter no 2 _ Frontend development/class01/app/Products/: page.tsx
Quarter no 2 _ Frontend development/class01/components/: Card.tsx  Nav.tsx
Quarter no 3 _ Backend development/Fast API_ genAi_01/Fast Api documentation Topics/: path_params.py  practice1.py  query_params.py  readme.md  request_body.py
Quarter no 3 _ Backend development/Fast API_ genAi_01/class01/: README.md  pyproject.toml
Quarter no 3 _ Backend development/Fast API_ genAi_01/class01/todos/: main.py
Quarter no 3 _ Backend development/Rest Api/: requirements.txt
